add explanation about loadings sign

--- a/docs/source/notebooks/mofacellular.ipynb
+++ b/docs/source/notebooks/mofacellular.ipynb
@@ -914,7 +914,9 @@
    "metadata": {},
    "source": [
     "We can see that some genes are present in only some of the cell type views and that some of the genes with highest (absolute) loadings tend to be cell type specific. Many genes are also be shared across views, but it's challenging to to decipher if they are shared because they are coordinated by the same biological process or because of technical issues with the data.\n",
-    "Thus, an essential step in the analysis is to select the genes for each cell type (view) in a way that is consistent with the biological knowledge of those cell types."
+    "Thus, an essential step in the analysis is to select the genes for each cell type (view) in a way that is consistent with the biological knowledge of those cell types.\n",
+    "\n",
+    "**NB: the interpretation of the sign of the feature loadings is relevant only to the sign of the factor scores themselves. In other words, a negative sign would mean that the features are negatively associated with the scores of a given factor, and the contrary for positive loadings!**"
    ]
   },
   {
