better cite misty text

--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -1892,10 +1892,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Citing this work\n",
+    "### Citing MISTy:\n",
     "\n",
-    "If you find this tutorial useful, please cite MISTy ([Tanevski et al., 2022](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-022-02663-5)) and any other database or method that you used in your analysis!"
+    "If you use MISTy via LIAAN+, please cite MISTy's original publication ([Tanevski et al., 2022](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-022-02663-5))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simiarly, consider citing any other database or method that you used in your analysis!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
