change image link

--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://camo.githubusercontent.com/35d823ebf582aaeb7e02e8e8807b62d2cff556b99adfbb4a93b8e221c6ea97ad/68747470733a2f2f7777772e64726f70626f782e636f6d2f732f357779683532306931776c3632756c2f67726170686963616c5f61627374726163742e706e673f7261773d31\" width=1000 />"
+    "<img src=\"https://uc872487a39c2784cec08c28e197.dl.dropboxusercontent.com/cd/0/inline/B-QLP9EJOda04CFCHWxr28wolLrT841ZzPOcq0HHwKczscxqDk5XcN-y96YWYwbDDobu5mbbaslFpRQ3ja2W_aTRkIliIdfmhz2ExV2qOVFyyJYaDvYjAN39_Vp_Kh4uO7QCGREbUpiy2qSWULNgcY4J7a9IzqkTIHhcXD1U2MkIKg/file#\" width=1000 />"
    ]
   },
   {
