--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://uc872487a39c2784cec08c28e197.dl.dropboxusercontent.com/cd/0/inline/B-QLP9EJOda04CFCHWxr28wolLrT841ZzPOcq0HHwKczscxqDk5XcN-y96YWYwbDDobu5mbbaslFpRQ3ja2W_aTRkIliIdfmhz2ExV2qOVFyyJYaDvYjAN39_Vp_Kh4uO7QCGREbUpiy2qSWULNgcY4J7a9IzqkTIHhcXD1U2MkIKg/file#\" width=1000 />"
+    "<img src=\"misty.png\" width=1000 />"
    ]
   },
   {
