drop uneeded columns, improve plots

--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -1118,7 +1118,7 @@
     "<h4> Feature importances </h4>\n",
     "\n",
     "Regardless of the model, each target is predicted independently, and the interpretation of feature importances depends on the model used. \n",
-    "By default, we use a random forest, so the feature importances are the mean decrease in Gini impurity of the features.\n",
+    "By default, we use a random forest, so the feature importances are the mean decrease in Gini impurity of the features. On the other hand, when we use a linear model, the feature importances are the t-values of the model coefficients.\n",
     "\n",
     "\n",
     "</div>  "
@@ -1153,17 +1153,10 @@
     }
    ],
    "source": [
-    "(li.pl.interactions(misty, view='juxta', return_fig=True) + \n",
-    " p9.scale_fill_gradient2(low = \"blue\", mid = \"white\", high = \"red\", midpoint = 0)\n",
+    "(\n",
+    "    li.pl.interactions(misty, view='juxta', return_fig=True) + \n",
+    "    p9.scale_fill_gradient2(low = \"blue\", mid = \"white\", high = \"red\", midpoint = 0)\n",
     ")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### NOTE: the coefficient depend on the scale of the targets!"
    ]
   },
   {
@@ -1539,6 +1532,7 @@
    "outputs": [],
    "source": [
     "# Calculate spatial neighbors\n",
+    "# NOTE: spatial_neighbors to fun?\n",
     "li.mt.spatial_neighbors(acts_msigdb, cutoff=0.1, bandwidth=200, set_diag=False)"
    ]
   },
