--- a/targeted.ipynb
+++ b/targeted.ipynb
@@ -23,7 +23,8 @@
    "source": [
     "Cell-cell communication (CCC) events, while commonly inferred between cell types in steady-state data, can also be inferred between conditions. \n",
     "\n",
-    "In contrast to dimensionality reduction approaches that reduce CCC into sets of loadings (See [MOFA+](https://liana-py.readthedocs.io/en/latest/notebooks/mofatalk.html) and [Tensor-cell2cell](https://liana-py.readthedocs.io/en/latest/notebooks/liana_c2c.html)), hypothesis-driven differential expression analysis (DEA) tests can be used alternatively to test individual gene changes. In this tutorial, we performed DEA at the pseudobulk level to test for differential expression of genes between conditions, and then translate the results into deregulated complex-informed ligand-receptor interactions. \n",
+    "In contrast to dimensionality reduction approaches that reduce CCC into sets of loadings (See our tutorials on extracting intercellular programmes with [MOFA+](https://liana-py.readthedocs.io/en/latest/notebooks/mofatalk.html) and [Tensor-cell2cell](https://liana-py.readthedocs.io/en/latest/notebooks/liana_c2c.html)), hypothesis-driven differential expression analysis (DEA) tests can be used alternatively to test individual gene changes. \n",
+    "In this tutorial, we perform DEA at the pseudobulk level to test for differential expression of genes between conditions, and then translate the results into deregulated complex-informed ligand-receptor interactions. Then we relate the deregulated interactions to intracellular signalling events.\n",
     "\n",
     "We refer the user to the [Differential Gene expression chapter](https://www.sc-best-practices.org/conditions/differential_gene_expression.html) in the Single-cell best practices book, as well as to [decoupler's pseudobulk vignette](https://decoupler-py.readthedocs.io/en/latest/notebooks/pseudobulk.html) for more details on the pseudobulk DEA."
    ]
@@ -527,25 +528,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "##### Dealing with heteromeric complexes\n",
-    "\n",
-    "LIANA will filter lowly-expressed interactions, i.e. those for which any of the genes are not expressed in at least 0.1 of the cells (by default) in the AnnData object. This can be adjusted with the `expr_prop` parameter. \n",
-    "\n",
-    "Moreover, to deal with complexes for each cell type, as either source or target of the potential CCC events, LIANA will find and assign the subunit of a complex with the lowest gene expression (by default) as the subunit of interest, and will then use the stats for that subunit as the stats of the whole protein complex.\n",
-    "\n",
-    "<div class=\"alert alert-info\">\n",
-    "This is a simple heuristic, and it is important to note that it is not perfect, as it will not work for all complexes. For example, if the subunit with lowest expression is not the one that is differentially expressed, the complex will not be detected as deregulated.\n",
-    "\n",
-    "To this end, we also provide the option to provide a `complex_col` parameter, which will be used to assign the complex subunit of interest. This column should be a part of the `stat_keys`. Note that the **absolute minimum value** is used (i.e. the value closest to 0 is thought to be the 'worst' result), so this will not work for statistics with ascending values (e.g. p-values).\n",
-    "</div>  "
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -792,6 +774,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "##### Dealing with heteromeric complexes\n",
+    "\n",
+    "LIANA will filter lowly-expressed interactions, i.e. those for which any of the genes are not expressed in at least 0.1 of the cells (by default) in the AnnData object. This can be adjusted with the `expr_prop` parameter. \n",
+    "\n",
+    "Moreover, to deal with complexes for each cell type, as either source or target of the potential CCC events, LIANA will find and assign the subunit of a complex with the lowest gene expression (by default) as the subunit of interest, and will then use the stats for that subunit as the stats of the whole protein complex.\n",
+    "\n",
+    "<div class=\"alert alert-info\">\n",
+    "This is a simple heuristic, and it is important to note that it is not perfect, as it will not work for all complexes. For example, if the subunit with lowest expression is not the one that is differentially expressed, the complex will not be detected as deregulated.\n",
+    "\n",
+    "To this end, we also provide the option to provide a `complex_col` parameter, which will be used to assign the complex subunit of interest. This column should be a part of the `stat_keys`. Note that the **absolute minimum value** is used (i.e. the value closest to 0 is thought to be the 'worst' result), so this will not work for statistics with ascending values (e.g. p-values).\n",
+    "</div>  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Process and Visualize the Results"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now that we have the interactions combined, let's keep only those in which either the ligand or receptor is differentially expressed."
    ]
   },
@@ -840,7 +849,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Plot Potentially Deregulated Interactions"
+    "##### Visualize Potentially Deregulated Interactions"
    ]
   },
   {
@@ -850,7 +859,7 @@
    "outputs": [],
    "source": [
     "lr_res['interactions'] = lr_res['ligand'] + '&' + lr_res['receptor']\n",
-    "# only keep interactions if in top 3, else nan\n",
+    "# only keep top interactions, else nan\n",
     "lr_res['top_interactions'] = lr_res['interactions'].where(lr_res.index.isin(lr_res.index[:1]), np.nan)\n",
     "# blue or red depending on sign of ligand or receptor, if both pos, red, if both neg, blue, if neither pos or neg, grey\n",
     "lr_res['sign'] = lr_res[['ligand_stat', 'receptor_stat']].apply(lambda x: \n",
