add checks for dea_to_lr

--- a/targeted.ipynb
+++ b/targeted.ipynb
@@ -560,10 +560,10 @@
     "lr_res = li.multi.dea_to_lr(adata,\n",
     "                            dea_df=dea_df,\n",
     "                            expr_prop=0.1, # calculated for adata as passed - used to filter interactions\n",
-    "                            groupby=groupby, # NOTE: Needs to match a column in dea_df and adata.obs\n",
+    "                            groupby=groupby,\n",
     "                            stat_keys=['stat', 'pvalue', 'padj'],\n",
     "                            use_raw=False,\n",
-    "                            complex_col='stat', # NOTE: here we use the Wald Statistic\n",
+    "                            complex_col='stat', # NOTE: we use the Wald Stat to deal with complexes\n",
     "                            verbose=True,\n",
     "                            )"
    ]
@@ -902,7 +902,6 @@
     }
    ],
    "source": [
-    "### scatter plot of receptor and ligand stats\n",
     "(\n",
     "    p9.ggplot(lr_res, p9.aes(x='receptor_stat', y='ligand_stat', color='sign')) +\n",
     "    p9.geom_point(alpha=0.5) +\n",
@@ -929,6 +928,27 @@
    "source": [
     "Note that we here focused on the interactions for which subunits are deregulated in the same direction, i.e. both up or both down. However, this might ignore interactions which are deregulated in opposite directions, but which are still potentially interesting, i.e. such that the ligand is up and the receptor is down, or vice versa. These could represent potential inhibitory mechanisms, but we leave this to the user to explore."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's also plot the ligand-receptor interactions with gene expression and significance as a heatmap"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
