--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Running MISTy"
+    "### Formatting & Running MISTy"
    ]
   },
   {
@@ -504,10 +504,16 @@
    "metadata": {},
    "source": [
     "The implementation of MISTy in LIANA makes extends [MuData](https://github.com/scverse/mudata) objects [(Bredikhin et al., 2022)](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-021-02577-8), to a very simple child class we call \"MistyData\". \n",
-    "To make it easier to use, we provide functions to construct a \"MistyData\" objects that transform the data into a format that MISTy can use.\n",
+    "To make it easier to use, we provide functions to construct \"MistyData\" objects that transform the data into a format that MISTy can use.\n",
     "\n",
     "Briefly, a \"MistyData\" object is just a MuData object with **intra** as one of the modalities - this is the view in which the variables explained by all other views are stored. \n",
     "MISTy is flexible to any other view that is appended, provided it also contains a spatial neighbors graph.\n",
+    "\n",
+    "<div class=\"alert alert-info\">\n",
+    "  Writing a MistyData object will simply result in a MuData object being written to disk.\n",
+    "  To read it back as MistyData, use `mudata.read_h5ad` and pass back it to the `MistyData()` function.\n",
+    "</div>\n",
+    "\n",
     "\n",
     "Let's use `genericMistyData` to construct a MuData object with the intra view and the cell type proportions as the first view.\n",
     "Then it additionally build a 'juxta' view for the spots that are neighbors of each other, and a 'para' view for all surrounding spots within a certain radius, or bandwidth.\n",
@@ -1857,26 +1863,6 @@
     "</div>  \n",
     "\n",
     "While this can be seen as a limitation, it can also be seen as an advantage of MISTy, as it allows us to explore potential ligand-receptor interactions that were not previously annotated!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['target', 'intra_R2', 'multi_R2', 'gain_R2', 'extra'], dtype='object')"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "misty.uns['target_metrics'].columns"
    ]
   },
   {
