update spatial tutos

--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -99,11 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: upload this to Zenodo or something?\n",
+    "# TODO: ADD description; upload this to Zenodo or something?\n",
     "adata = sc.read_h5ad('/media/dbdimitrov/SSDDimitrov/data/kuppe_visium/Visium_19_CK297.h5ad')"
    ]
   },
@@ -331,15 +331,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cell type proportions"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This slide comes with already processed cell type proportions. Let's extract them to an AnnData object."
+    "##### Extract Cell type Composition\n",
+    "This slide comes with estimated cell type proportions using cell2location; See [Kuppe et al., 2022](https://www.nature.com/articles/s41586-022-05060-x). Let's extract from .obsm them to an independent AnnData object."
    ]
   },
   {
@@ -1882,6 +1875,22 @@
    "source": [
     "Simiarly, consider citing any other database or method that you used in your analysis!"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-info\">\n",
+    "  While MISTy provides a flexible framework for the inference of spatially-informed interactions, it only summarizes relationships between the variables on the level of the whole slide (or niche); one should thus consider  <a href=\"https://liana-py.readthedocs.io/en/latest/notebooks/bivariate.html\"> LIANA+'s bivariate local functions</a>. These are simple spatially-informed spatially-informed metrics calculated at the spot-/cell-level. Thus, one can use them to visualize and explore the local distribution of interactions with spatial context.\n",
+    "</div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
