replace with figshare link

--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -51,9 +51,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```\n",
+    "```{bash}\n",
     "pip install squidpy\n",
-    "pip install decoupler\n",
+    "pip install \"decoupler>=1.4.0\"\n",
     "\n",
     "```"
    ]
@@ -75,15 +75,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_bivariate_funs.py:9: NumbaPerformanceWarning: np.dot() is faster on contiguous arrays, called on (array(float32, 1d, C), array(float32, 1d, A))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import liana as li\n",
     "from liana.method import MistyData, genericMistyData, lrMistyData"
@@ -99,12 +91,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 44.4M/44.4M [00:01<00:00, 23.9MB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: ADD description; upload this to Zenodo or something?\n",
-    "adata = sc.read_h5ad('/media/dbdimitrov/SSDDimitrov/data/kuppe_visium/Visium_19_CK297.h5ad')"
+    "adata = sc.read(\"kuppe_heart19.h5ad\", backup_url='https://figshare.com/ndownloader/files/41501073?private_link=4744950f8768d5c8f68c')"
    ]
   },
   {
@@ -435,7 +435,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:03<00:00,  3.67s/it]\n"
+      "100%|██████████| 1/1 [00:03<00:00,  3.44s/it]\n"
      ]
     }
    ],
@@ -601,7 +601,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: vSMCs: 100%|██████████| 11/11 [01:06<00:00,  6.04s/it]  \n"
+      "Now learning: vSMCs: 100%|██████████| 11/11 [00:47<00:00,  4.33s/it]  \n"
      ]
     }
    ],
@@ -755,7 +755,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8738340099187)>"
+       "<ggplot: (8758025046980)>"
       ]
      },
      "execution_count": 17,
@@ -793,7 +793,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8738340107412)>"
+       "<ggplot: (8758025042221)>"
       ]
      },
      "execution_count": 18,
@@ -831,7 +831,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8738340452800)>"
+       "<ggplot: (8758022085233)>"
       ]
      },
      "execution_count": 19,
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -963,10 +963,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8738340072494)>"
+       "<ggplot: (8758024918254)>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,14 +997,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: vSMCs: 100%|██████████| 11/11 [00:07<00:00,  1.42it/s]  \n"
+      "Now learning: vSMCs: 100%|██████████| 11/11 [00:07<00:00,  1.56it/s]  \n"
      ]
     }
    ],
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1038,10 +1038,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8738340370297)>"
+       "<ggplot: (8758024982291)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1076,10 +1076,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8738340286927)>"
+       "<ggplot: (8758022068059)>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1118,10 +1118,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8738339947656)>"
+       "<ggplot: (8758024928566)>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1310,7 @@
        "[3838548 rows x 3 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1440,7 @@
        "[7318 rows x 3 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1471,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4113/4113 [00:18<00:00, 224.82it/s]\n",
+      "100%|██████████| 4113/4113 [00:19<00:00, 206.31it/s]\n",
       "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/internals/blocks.py:351: RuntimeWarning: divide by zero encountered in log10\n"
      ]
     }
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1556,10 +1556,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8738325277345)>"
+       "<ggplot: (8758022015193)>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1570,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1589,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1652,7 @@
        "      obsp:\t'spatial_connectivities'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1671,14 +1671,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: vSMCs: 100%|██████████| 11/11 [00:04<00:00,  2.54it/s]  \n"
+      "Now learning: vSMCs: 100%|██████████| 11/11 [00:06<00:00,  1.72it/s]  \n"
      ]
     }
    ],
@@ -1696,7 +1696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1712,10 +1712,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8738340255591)>"
+       "<ggplot: (8758044202369)>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1750,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1785,14 +1785,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: CSF3R: 100%|██████████| 89/89 [00:35<00:00,  2.48it/s]      \n"
+      "Now learning: CSF3R: 100%|██████████| 89/89 [00:37<00:00,  2.37it/s]      \n"
      ]
     }
    ],
@@ -1810,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1828,10 +1828,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8738340085385)>"
+       "<ggplot: (8758043963654)>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,12 +1885,6 @@
     "  While MISTy provides a flexible framework for the inference of spatially-informed interactions, it only summarizes relationships between the variables on the level of the whole slide (or niche); one should thus consider  <a href=\"https://liana-py.readthedocs.io/en/latest/notebooks/bivariate.html\"> LIANA+'s bivariate local functions</a>. These are simple spatially-informed spatially-informed metrics calculated at the spot-/cell-level. Thus, one can use them to visualize and explore the local distribution of interactions with spatial context.\n",
     "</div>"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
