minor text format

--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -1139,8 +1139,6 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-info\">\n",
-    "\n",
-    "**Note**\n",
     "    \n",
     "<h4> Feature importances </h4>\n",
     "\n",
@@ -1524,7 +1522,7 @@
    "outputs": [],
    "source": [
     "# Calculate spatial neighbors\n",
-    "# NOTE: spatial_neighbors to fun?\n",
+    "# NOTE: move spatial_neighbors to fun?\n",
     "li.mt.spatial_neighbors(acts_msigdb, cutoff=0.1, bandwidth=200, set_diag=False)"
    ]
   },
@@ -1838,7 +1836,7 @@
    ],
    "source": [
     "(\n",
-    "    li.pl.interactions(misty, 'extra', return_fig=True, figure_size=(5, 5), top_n=25, key=lambda x: np.abs(x)) + \n",
+    "    li.pl.interactions(misty, 'extra', return_fig=True, figure_size=(5, 5), top_n=25, key=abs) + \n",
     "    p9.scale_fill_gradient2(low = \"blue\", mid = \"white\", high = \"red\", midpoint = 0) +\n",
     "    p9.labs(y='Receptor', x='Ligand')\n",
     ")"
