--- a/targeted.ipynb
+++ b/targeted.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypothesis-testing for CCC across Conditions"
+    "# Hypothesis testing for deregulated CCC across Conditions"
    ]
   },
   {
@@ -53,15 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/martin/Desktop/liana-py/liana/method/sp/_bivariate_funs.py:9: NumbaPerformanceWarning: np.dot() is faster on contiguous arrays, called on (Array(float32, 1, 'C', False, aligned=True), Array(float32, 1, 'A', False, aligned=True))\n",
-      "/Users/martin/miniconda3/envs/liana/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n"
+      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n"
      ]
     }
    ],
@@ -101,16 +100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 36.6M/36.6M [00:24<00:00, 1.54MB/s]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -121,7 +113,7 @@
        "    layers: 'counts'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,6 +1525,7 @@
    "source": []
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1705,9 +1698,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "liana",
+   "display_name": "spiana",
    "language": "python",
-   "name": "python3"
+   "name": "spiana"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1719,7 +1712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
