remove redundant scores

--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -93,15 +93,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 44.4M/44.4M [00:01<00:00, 23.9MB/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# TODO: ADD description; upload this to Zenodo or something?\n",
     "adata = sc.read(\"kuppe_heart19.h5ad\", backup_url='https://figshare.com/ndownloader/files/41501073?private_link=4744950f8768d5c8f68c')"
@@ -1849,7 +1841,7 @@
    "source": [
     "<div class=\"alert alert-info\">\n",
     "\n",
-    "Note that in contrast to any other other functions in LIANA, misty will infer all possible interactions between ligands and receptors - i.e. not only those that were annotated specifically as ligand-receptor interactions. \n",
+    "In contrast to any other other functions in LIANA, misty will infer all possible interactions between ligands and receptors - i.e. not only those that were annotated specifically as ligand-receptor interactions. \n",
     "\n",
     "</div>  \n",
     "\n",
