filter to positive_only

--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -86,7 +86,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load Data"
+    "### Load and Normalize Data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To showcase LIANA's local functions, we will use an ischemic 10X Visium spatial slide from [Kuppe et al., 2022](https://www.nature.com/articles/s41586-022-05060-x). It is a tissue sample obtained from a patient with myocardial infarction, specifically focusing on the ischemic zone of the heart tissue. \n",
+    "\n",
+    "The slide provides spatially-resolved information about the cellular composition and gene expression patterns within the tissue."
    ]
   },
   {
@@ -95,7 +105,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: ADD description; upload this to Zenodo or something?\n",
     "adata = sc.read(\"kuppe_heart19.h5ad\", backup_url='https://figshare.com/ndownloader/files/41501073?private_link=4744950f8768d5c8f68c')"
    ]
   },
@@ -295,6 +304,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Normalize data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata.layers['counts'] = adata.X.copy()\n",
+    "sc.pp.normalize_total(adata, target_sum=1e4)\n",
+    "sc.pp.log1p(adata)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Spot clusters"
    ]
   },
@@ -355,25 +383,6 @@
    "source": [
     "# check key cell types\n",
     "sq.pl.spatial_scatter(comps, color=['vSMCs','CM', 'Endo', 'Fib'], size=1.3, ncols=2, img_alpha=0)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Normalize data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.layers['counts'] = adata.X.copy()\n",
-    "sc.pp.normalize_total(adata, target_sum=1e4)\n",
-    "sc.pp.log1p(adata)"
    ]
   },
   {
